# mandarin-pitch-detector

./: README.md  pyproject.toml  tox.ini
backend/: pyproject.toml
backend/src/mandarin_pitch_detector/: __init__.py  data_file_access.py  main.py  pitch_detector.py  pitch_model.py  visualization.py
backend/src/mandarin_pitch_detector/rest/: __init__.py  rest_api.py
data/: time_freq_confidence.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  vite-env.d.ts
frontend/src/components/: PitchAnalyzer.tsx
frontend/src/utils/: audioHelpers.ts
src/mandarin_pitch_detector/: main.py  pitch_detector.py  visualization.py
